--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "gatsby": "^4.18.2",
-    "gatsby-plugin-google-analytics": "^4.18.0",
-    "gatsby-plugin-react-helmet": "^5.18.0",
+    "gatsby": "^4.23.1",
+    "gatsby-plugin-google-analytics": "^4.23.0",
+    "gatsby-plugin-react-helmet": "^5.23.0",
     "gatsby-plugin-s3": "^0.3.8",
-    "gatsby-plugin-sass": "^5.18.1",
-    "gatsby-source-filesystem": "^4.18.1",
-    "gatsby-transformer-json": "^4.18.0",
-    "gatsby-transformer-remark": "^5.18.1",
-    "node-sass": "^7.0.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-helmet": "^6.1.0",
-    "react-tag-cloud": "^1.3.3"
+    "gatsby-plugin-sass": "^5.23.1",
+    "gatsby-source-filesystem": "^4.23.0",
+    "gatsby-transformer-json": "^4.23.0",
+    "gatsby-transformer-remark": "^5.23.1",
+    "node-sass": "^7.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
